--- a/client/app/src/app/producto/producto-detail/producto-detail.component.html
+++ b/client/app/src/app/producto/producto-detail/producto-detail.component.html
@@ -49,7 +49,7 @@
         </mat-dialog-content>
 
         <div class="botones">
-          <button mat-raised-button class="btnAccion" color="primary">
+          <button  (click)="comprar(datos.id)" mat-raised-button class="btnAccion" color="primary">
             <mat-icon>add_shopping_cart</mat-icon>Añadir al carrito
           </button>
         </div>
