Listado de usuarios con deshabilitación y activación
También estuve jugando con los botones del navbar

--- a/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
+++ b/client/app/src/app/compra/compra-by-cliente/compra-by-cliente.component.html
@@ -68,7 +68,7 @@
       <h1 style="text-align: center;">
         No ha comprado nada.
       <br>
-      ¡Apurele!
+      ¡Apúrele!
       </h1>
     </div>
     <!-- Table -->
