--- a/client/app/src/app/facturacion/carrito/carrito.component.html
+++ b/client/app/src/app/facturacion/carrito/carrito.component.html
@@ -75,7 +75,7 @@
 
     <div *ngIf="qtyItems <= 0">
       <h1 align="center">¡No hay items en el carrito!</h1>
-      <h2 align="center">¡Apurele!</h2>
+      <h2 align="center">¡Apúrele!</h2>
     </div>
   </mat-card-content>
   <mat-card-actions>
