--- a/client/app/src/app/compra/orden-all/orden-all.component.html
+++ b/client/app/src/app/compra/orden-all/orden-all.component.html
@@ -30,7 +30,7 @@
   
           <!-- Columna Producto -->
           <ng-container matColumnDef="total">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Total de compra</th>
             <td mat-cell *matCellDef="let row">{{ row.Total | currency : "₡" }}</td>
           </ng-container>
   
