YA CAMBIA LA CANTIDAD, A PURA MANIFESTACIÓN Y TYPESCRIPT

--- a/client/app/src/app/facturacion/carrito/carrito.component.html
+++ b/client/app/src/app/facturacion/carrito/carrito.component.html
@@ -32,7 +32,7 @@
               id="cantidad "
               type="number"
               class="form-control mb-2"
-              [(ngModel)]="element.cantidad"
+              [(ngModel)]="element.Cantidad"
               (change)="actualizarCantidad(element)"
             />
           </mat-form-field>
