MENTIRA HABÍA UN BUG, YA LO ARREGLÉ También hice el inico un poco bonito

--- a/client/app/src/app/core/header/header.component.css
+++ b/client/app/src/app/core/header/header.component.css
@@ -84,8 +84,7 @@ c-navbar-nav[_ngcontent-ng-c2598991299] {
   margin-top: 1.5%;
 }
 
-.btnEmail {
-  height: 70%;
+.dropdown {
   background-color: transparent;
   border: transparent;
 }
