--- a/client/app/src/app/home/inicio/inicio.component.css
+++ b/client/app/src/app/home/inicio/inicio.component.css
@@ -1,6 +1,34 @@
-body{
-    background-color:#C6AC8F !important;
+body {
+  background-color: #c6ac8f !important;
 }
-p{
-    margin: 0%;
+p {
+  margin: 0%;
+}
+
+.jake {
+  justify-content: center;
+  text-align: center;
+  height: 100vh;
+  text-shadow: 3px 3px 3px black;
+  object-fit: scale-down;
+  background-position: 20%;
+  background-size: cover;
+  background-image: url(../../../assets/img/Banner.jpg);
+  color: white;
+}
+
+.botones {
+  justify-content: center;
+  display: flex;
+  width: 100%;
+}
+
+.btnAccion {
+  padding: 2rem;
+  font-size: large;
+  margin: 1rem
+}
+
+.btnAccion:hover {
+  background-color: #c44536;
 }
