registro usuario part1
parte 1 de 3. El usuario se registra con validaciones y le muestra un dialogo para redirigirlo a direcciones. La lógica de direcciones y métodos junto con las ventanas hechas la tengo todavía yo porque los forms son un desastre que mañana arreglo

--- a/client/app/src/app/user/user-create/user-create.component.css
+++ b/client/app/src/app/user/user-create/user-create.component.css
@@ -1,31 +1,62 @@
-mat-form-field.mat-form-field {
-    font-size: 16px;
-  }
-  .full-width {
-    width: 100%;
-  }
+body {
+  background-color: #c6ac8f !important;
+  margin-bottom: 5rem;
+
+}
+.main-div{
+  margin-top: 20%;
+  margin: 3% auto;
+  max-width: 80%;
+  justify-content: center;
+  align-items: center;
+}
+.dialog-content{
+  display: flex;
+  justify-content: space-between;
+}
+.divTitular{
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding:5%;
+  margin-top: 5px;
+  background-color: #212121;
+  color:white;
+  border-radius: 5px;
+  font-size:larger;
+}
+.dialog-left {
+  width: 50%; 
+  display: flex;
+  flex-direction: column;
+  margin:1%;
+  padding: 1%;
+}
+.dialog-right {
+  width: 50%; 
+  display: flex;
+  flex-direction: column;
+  margin:1%;
+  padding: 1%;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  --cui-gutter-x: -0.5rem;
+}
+
+.col {
+  flex: 1;
+  margin-right: 20px;
+}
+.full-width {
+  width: 100%;
+}
+.borde{
+  background-color: #f2f2f2;
+  border-radius: 10px;
+ 
   
-  .shipping-card {
-    min-width: 120px;
-    margin: 20px auto;
-  }
   
-  .mat-radio-button {
-    display: block;
-    margin: 5px 0;
-  }
-  
-  .row {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .col {
-    flex: 1;
-    margin-right: 20px;
-  }
-  
-  .col:last-child {
-    margin-right: 0;
-  }
-  
+}
