--- a/client/app/src/app/user/user-index/user-index.component.html
+++ b/client/app/src/app/user/user-index/user-index.component.html
@@ -5,7 +5,7 @@
   <mat-card-content>
 <nav mat-tab-nav-bar backgroundColor="primary" [tabPanel]="tabPanel">
   <a mat-tab-link [routerLink]="['/usuario/login']" routerLinkActive="active-link">Login</a>
-  <a mat-tab-link [routerLink]="['/usuario/registrar']" routerLinkActive="active-link">Registrarse</a>
+  <!-- <a mat-tab-link [routerLink]="['/usuario/registrar']" routerLinkActive="active-link">Registrarse</a> -->
 </nav>
 <mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
 <div>	
