--- a/client/app/src/app/facturacion/confirmar/confirmar.component.html
+++ b/client/app/src/app/facturacion/confirmar/confirmar.component.html
@@ -1,5 +1,92 @@
-<h1 align="center">Bajo construcción 😎😎</h1>
+<form [formGroup]="compraForm" (ngSubmit)="registrarOrden()" novalidate>
+  <mat-card class="shipping-card">
+    <mat-card-header>
+      <h4>Confirmar compra</h4>
+    </mat-card-header>
 
-<img src="https://w7.pngwing.com/pngs/1013/365/png-transparent-bob-the-builder-farmer-pickles-prince-wednesday-can-we-fix-it-constructor.png" alt="">
-<img src="https://www.ecured.cu/images/1/1a/HandyManny.jpeg" alt="">
-<img src="https://upload.wikimedia.org/wikipedia/en/e/e7/Steve_%28Minecraft%29.png" alt="">
+    <mat-card-content *ngIf="dataSource">
+      <mat-table
+        style="box-shadow: none"
+        *ngIf="qtyItems > 0"
+        [dataSource]="dataSource"
+        class="mat-elevation-z8"
+      >
+        <ng-container matColumnDef="producto">
+          <mat-cell *matCellDef="let element">
+            {{ element.producto.Nombre }}
+          </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="precio">
+          <mat-cell *matCellDef="let element">
+            {{ element.precio | currency : "₡" }}
+          </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="cantidad">
+          <mat-cell *matCellDef="let element">
+            {{ element.Cantidad }}
+          </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="subtotal">
+          <mat-cell *matCellDef="let element">
+            {{ element.subtotal | currency : "₡" }}
+          </mat-cell>
+        </ng-container>
+
+        <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+      </mat-table>
+    </mat-card-content>
+
+    <!--Inicio Form-->
+    <mat-card-content>
+      <input type="hidden" formControlName="clienteId" />
+      <div class="row">
+        <div class="col">
+          <mat-label>
+            <b>Cliente:</b>
+            {{
+              currentUser.user.Nombre + " " + currentUser.user.Apellido
+            }}</mat-label
+          >
+        </div>
+        <div class="row">
+          <div class="col" *ngIf="DireccionList">
+            <mat-form-field floatLabel="always" class="full-width">
+              <mat-label>Direccion</mat-label>
+              <mat-select formControlName="DireccionId"  (valueChange)="mostrarDireccion($event)">
+                <mat-option *ngFor="let g of DireccionList" [value]="g.id">
+                  {{ g.Titulo }}
+                </mat-option>
+              </mat-select>
+              <mat-error> Seleccione una dirección. </mat-error>
+            </mat-form-field>
+          </div>
+          <mat-label>{{ Direccion }}</mat-label>
+        </div>
+
+        <div class="row">
+          <div class="col" *ngIf="MetodoPagoList">
+            <mat-form-field floatLabel="always" class="full-width">
+              <mat-label>Estado del producto</mat-label>
+              <mat-select formControlName="MetodoPagoId">
+                <mat-option *ngFor="let g of MetodoPagoList" [value]="g.id">
+                  {{ g.Titulo }}
+                </mat-option>
+              </mat-select>
+              <mat-error> Seleccione un método de pago. </mat-error>
+            </mat-form-field>
+          </div>
+
+          <mat-label>{{ MetodoPago }}</mat-label>
+        </div>
+      </div>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" type="submit">
+        Confirmar Compra
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</form>
